--- a/listing-stay-details.html
+++ b/listing-stay-details.html
@@ -1127,6 +1127,66 @@
         </section>
         <!-- gallery-section-end -->
 
+        <!-- img-modal -->
+        <div class="img-modal">
+          <a href="#" class="img-modal-close">
+            <i class="fal fa-times"></i>
+          </a>
+          <div class="img-modal-counter" id="img-modal-counter"></div>
+          <div class="img-modal-slider__outer">
+            <div
+              class="img-modal-slider img-modal-slider-active slider-arrow-1 owl-carousel"
+            >
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+              <div class="img-modal-slide">
+                <div class="image">
+                  <img src="images/gallery-img-1.jpg" alt="" class="img" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- img-modal-end -->
+
         <!-- listing-details-section -->
         <section class="listing-details-section">
           <div class="container">
@@ -1143,13 +1203,17 @@
                             <div class="icon">
                               <i class="fal fa-sign-out fa-rotate-270"></i>
                             </div>
-                            <span class="txt">Share</span>
+                            <span class="txt mbl-hid"
+                              ><span class="">Share</span></span
+                            >
                           </a>
                           <a href="#" class="it-ma">
                             <div class="icon">
                               <i class="fal fa-heart"></i>
                             </div>
-                            <span class="txt">Save</span>
+                            <span class="txt mbl-hid"
+                              ><span class="">Save</span></span
+                            >
                           </a>
                         </div>
                       </div>
@@ -1167,25 +1231,34 @@
                           <div class="icon">
                             <i class="far fa-user"></i>
                           </div>
-                          <span class="txt">6 guests</span>
+                          <span class="txt"
+                            >6
+                            <div class="mbl-hid">guests</div></span
+                          >
                         </div>
                         <div class="it-ma">
                           <div class="icon">
                             <i class="far fa-bed-alt"></i>
                           </div>
-                          <span class="txt">6 beds</span>
+                          <span class="txt"
+                            >6 <span class="mbl-hid">beds</span></span
+                          >
                         </div>
                         <div class="it-ma">
                           <div class="icon">
                             <i class="far fa-bath fa-flip-horizontal"></i>
                           </div>
-                          <span class="txt">3 baths</span>
+                          <span class="txt"
+                            >3 <span class="mbl-hid">baths</span></span
+                          >
                         </div>
                         <div class="it-ma">
                           <div class="icon">
                             <i class="fal fa-door-open"></i>
                           </div>
-                          <span class="txt">2 bedrooms</span>
+                          <span class="txt"
+                            >2 <span class="mbl-hid">bedrooms</span></span
+                          >
                         </div>
                       </div>
                     </div>
@@ -1488,6 +1561,16 @@
           </div>
         </section>
         <!-- listing-details-section-end -->
+
+        <!-- lds-proc -->
+        <div class="ldc-cont-mbl">
+          <div class="ldc-cont-mbl__left">
+            <div class="price">$119 <span class="sml">/night</span></div>
+            <p class="date mb-0 underline">Feb 20 - 26</p>
+          </div>
+          <a href="#" class="default-button">Contact</a>
+        </div>
+        <!-- lds-proc-end -->
 
         <!-- sug-section -->
         <section class="sug-section">
