--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,12 @@
                   >
                 </div>
                 <div class="hero__right-image">
-                  <img src="images/hero-image.png" alt="" class="img" />
+                  <div class="hero__right-img__inner">
+                    <img src="images/hero-image.png" alt="" class="img" />
+                    <img src="images/hero-image-1.png" alt="" class="img-1" />
+                    <img src="images/hero-image-2.png" alt="" class="img-2" />
+                    <img src="images/hero-image-3.png" alt="" class="img-3" />
+                  </div>
                 </div>
               </div>
               <div class="hero__search__wrap d-lg-block d-none">
